public class LibraryMenu implements Menu {

}
