public class Main {
    public static void main(String[] args) {
        StartMenu sm = new StartMenu();
        sm.menu();
    }
}