public interface Menu {

    void showMenu();





}
