// TODO: udfyld season
public class Season {
    int seasonNumber;
    int episodes;

    public Season(int seasonNumber, int episodes) {
        this.seasonNumber = seasonNumber;
        this.episodes = episodes;
    }
}
