public class User {
    private String nickname;
    private boolean isAdult;

    public User(String nickname, boolean isAdult) {
        this.nickname = nickname;
        this.isAdult = isAdult;
    }
}
